--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -2,7 +2,7 @@
 <ul>
   <div *ngFor='let quote of quotes;let i = index'>
     <h3>{{quote.name}}</h3>
-    <button (click)='toogleDetails(i)'>\|/</button><div style="float: right">{{quote.completeDate|date}}</div>
+    <button (click)='toogleDetails(i)'>\|/</button><div style="float: right">{{quote.completeDate|dateCount}}</div>
     <h4><app-quote-details *ngIf="quote.showDescription" [quote]='quote'></app-quote-details></h4>
   </div>
 </ul>
