--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,8 +1,10 @@
 <h1 style="text-align: center"><u>QUOTES.</u></h1>
 <ul>
+  <div class="container">
   <div *ngFor='let quote of quotes;let i = index'>
     <h3>{{quote.name}}</h3>
     <button (click)='toogleDetails(i)'>\|/</button><div style="float: right">{{quote.completeDate|dateCount}}</div>
     <h4><app-quote-details *ngIf="quote.showDescription" [quote]='quote'></app-quote-details></h4>
+  </div>
   </div>
 </ul>
