--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,10 +1,15 @@
-<h1 style="text-align: center"><u>QUOTES.</u></h1>
-<ul>
+<body>
   <div class="container">
-  <div *ngFor='let quote of quotes;let i = index'>
-    <h3>{{quote.name}}</h3>
-    <button (click)='toogleDetails(i)'>\|/</button><div style="float: right">{{quote.completeDate|dateCount}}</div>
-    <h4><app-quote-details *ngIf="quote.showDescription" [quote]='quote'></app-quote-details></h4>
+    <h1 class="jumbotron" style="text-align: center"><u>QUOTES.</u></h1><br>
+    <div class="row">
+      <div *ngFor='let quote of quotes;let i = index' class="col-md-6">
+        <h3>{{quote.name}}</h3>
+        <button class="btn btn-danger" (click)='toogleDetails(i)'></button>
+        <div style="float: right" id="number">{{quote.completeDate|dateCount}}</div>
+        <h4>
+          <app-quote-details *ngIf="quote.showDescription" [quote]='quote'></app-quote-details>
+        </h4>
+      </div>
+    </div>
   </div>
-  </div>
-</ul>
+</body>
