--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,6 +1,9 @@
 <body>
   <div class="container">
     <h1 class="jumbotron" style="text-align: center"><u>QUOTES.</u></h1><br>
+
+
+
     <div class="row">
       <div *ngFor='let quote of quotes;let i = index' class="col-md-6">
         <h3>{{quote.name}}</h3>
@@ -10,6 +13,9 @@
           <app-quote-details *ngIf="quote.showDescription" [quote]='quote'></app-quote-details>
         </h4>
       </div>
+    </div>
+    <div style="text-align: center;" >
+      <app-quote-form></app-quote-form>
     </div>
   </div>
 </body>
