--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,32 +1,43 @@
-<div  class="container-fluid">
-    <div class="row">
-        <form #quoteForm='ngForm'>
-            <div class="form-group">
+<div class="container-fluid">
+  <div class="row">
+    <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
+      <div class="form-group">
 
-                <label style="color:aqua;" for="name">NAME:</label>
-                <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name">
-                Display {{newQuote.name}}
+        <label style="color:aqua;" for="name">NAME:</label>
+        <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name"
+          #name="ngModel" required>
+        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+          <p> Name is Required</p>
+        </div>
 
-            </div>
-            <div class="form-group">
+      </div>
+      <div class="form-group">
 
-                <label style="color:aqua;" for="name">QUOTE:</label>
-                <input type="text" required class="form-control" id="name">
+        <label style="color:aqua;" for="name">QUOTE:</label>
+        <input type="text" required class="form-control" id="name">
 
-            </div>
-            <div class="form-group">
+      </div>
+      <div class="form-group">
 
-                <label style="color:aqua;" for="description">AUTHOR'S NAME:</label>
-                <textarea class="form-control" id="description" rows="4" required></textarea>
-                
-            </div>
-            <div class="form-group">
-                <label for="complete">Completion</label>
-                <input type='date' id="complete" required>
-                
-            </div>
-            <button type="submit" class="btn btn-success btn-lg">Add Quote</button>
+        <label style="color:aqua;" for="description">AUTHOR'S NAME:</label>
+        <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description"
+          #description="ngModel" required></textarea>
+        <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+          <p> Description is Required</p>
 
-        </form>
-    </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="complete">Completion</label>
+        <input type='date' id="complete" [(ngModel)]="newQuote.completeDate" name="completeDate" #completeDate="ngModel"
+          required>
+        <div [hidden]="completeDate.valid || completeDate.pristine" class="alert alert-danger">
+          <p> Complete Date is Required</p>
+
+        </div>
+      </div>
+      <button type="submit" class="btn btn-success btn-lg">Add Quote</button>
+
+    </form>
+  </div>
 </div>
