--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -5,7 +5,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: purple;
   text-decoration: none;
   font-size: large;
 }
