--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,27 +1,19 @@
-<div class="container-fluid">
+<div class="container-fluid" >
   <div class="row">
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
       <div class="form-group">
 
-        <label style="color:aqua;" for="name">NAME:</label>
-        <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name"
-          #name="ngModel" required>
+        <label style="color:aqua;" for="name">QUOTE:</label>
+        <textarea type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name="ngModel" required></textarea>
         <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-          <p> Name is Required</p>
+          <p> Quote is Required</p>
         </div>
 
-      </div>
-      <div class="form-group">
-
-        <label style="color:aqua;" for="name">QUOTE:</label>
-        <input type="text" required class="form-control" id="name">
-
-      </div>
+      </div>      
       <div class="form-group">
 
         <label style="color:aqua;" for="description">AUTHOR'S NAME:</label>
-        <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description"
-          #description="ngModel" required></textarea>
+        <input class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required>
         <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
           <p> Description is Required</p>
 
