--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -8,17 +8,20 @@
       <div *ngFor='let quote of quotes;let i = index' class="col-md-6">
         <h3>{{quote.name}}</h3>
         <button class="btn btn-danger" (click)='toogleDetails(i)'></button>
+       
         <div style="float: right" id="number">{{quote.completeDate|dateCount}}</div>
+        
         <h4>
           <app-quote-details *ngIf="quote.showDescription" [quote]='quote'></app-quote-details>
         </h4>
+        <like-box></like-box>
         </div>
-        
+       
     </div>
     
     
 
-    <div style="text-align: center;" class="col-md-12" >
+    <div style="text-align: center;">
       <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
     </div>
   </div>
