--- a/src/app/like/like.component.html
+++ b/src/app/like/like.component.html
@@ -1,5 +1,5 @@
 <div>
-  <p>{{numberOfLikes}}  likes</p> <p>{{numberOfDislikes}}  dislikes</p>
+  <p>{{numberOfLikes}}  likes</p> <p styles="float:right;">{{numberOfDislikes}}  dislikes</p>
   <button class="btn btn-success"(click)="likeButtonClick()">Like</button>
   <button class="btn btn-danger"(click)="dislikeButtonClick()">Dislike</button>
 </div>
