--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -5,9 +5,9 @@
 
 
     <div class="row">
-      <div *ngFor='let quote of quotes;let i = index' class="col-md-6"><br>
+      <div *ngFor='let quote of quotes;let i = index' class="col-md-6" id="ngamia"><br>
         <h3>{{quote.name}}</h3>
-        <button class="btn btn-danger" (click)='toogleDetails(i)'></button>
+        <button class="btn btn-warning btn-lg" (click)='toogleDetails(i)'></button>
 
         <div style="float: right" id="number">{{quote.completeDate|dateCount}}</div>
 
@@ -15,8 +15,8 @@
           <app-quote-details *ngIf="quote.showDescription" [quote]='quote'></app-quote-details>
         </h4>
         <like-box></like-box>
-      </div>
 
+      </div>
     </div>
 
 
